# FluDo

./: .pre-commit-config.yaml  README.md  pyproject.toml  settings.py
app/: main.py
app/api/: api.py
app/api/endpoints/: items.py  list.py
app/models/: __init__.py  init_db.py  list.py
app/schemas/: list.py
